--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,19 +1,22 @@
 -   id: go-fmt
     name: 'go fmt'
     entry: run-go-fmt.sh
-    files: $(shell find . -type f -name '*.go' -not -path "./vendor/*")
+    files: '\.go$'
+    exclude: './vendor/*'
     language: 'script'
     description: "Runs `gofmt`, requires golang"
 -   id: go-vet
     name: 'go vet'
     entry: run-go-vet.sh
-    files: $(shell find . -type f -name '*.go' -not -path "./vendor/*")
+    files: '\.go$'
+    exclude: './vendor/*'
     language: 'script'
     description: "Runs `go vet`, requires golang"
 -   id: go-lint
     name: 'go lint'
     entry: run-go-lint.sh
-    files: $(shell find . -type f -name '*.go' -not -path "./vendor/*")
+    files: '\.go$'
+    exclude: './vendor/*'
     language: 'script'
     description: "Runs `golint`, requires https://github.com/golang/lint"
 -   id: validate-toml
