--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,21 +2,21 @@
     name: 'go fmt'
     entry: run-go-fmt.sh
     files: '\.go$'
-    exclude: './vendor/*'
+    exclude: 'vendor\/*'
     language: 'script'
     description: "Runs `gofmt`, requires golang"
 -   id: go-vet
     name: 'go vet'
     entry: run-go-vet.sh
     files: '\.go$'
-    exclude: './vendor/*'
+    exclude: 'vendor\/*'
     language: 'script'
     description: "Runs `go vet`, requires golang"
 -   id: go-lint
     name: 'go lint'
     entry: run-go-lint.sh
     files: '\.go$'
-    exclude: './vendor/*'
+    exclude: 'vendor\/*'
     language: 'script'
     description: "Runs `golint`, requires https://github.com/golang/lint"
 -   id: validate-toml
